--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ packages = [
 ]
 include = [
     {path = "LICENSE"},
+    {path = "CONTRIBUTING.md", format = "sdist"},
     {path = ".env.example", format = "sdist"}
 ]
 keywords = ["daraja", "mpesa", "payment"]
 classifiers = [
+    "Natural Language :: English",
     "Programming Language :: Python",
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License",
