--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,19 +2,19 @@
 name = "mpesa-connect"
 version = "0.1.4"
 description = "A wrapper library for the Daraja Mpesa API"
-authors = ["Emz D <seaworndrift@gmail.com>"]
-homepage = "https://github.com/enwawerueli/mpesa-connect"
-repository = "https://github.com/enwawerueli/mpesa-connect"
+authors = ["Eric <seaworndrift@gmail.com>"]
+homepage = "https://github.com/seaworn/mpesa-connect"
+repository = "https://github.com/seaworn/mpesa-connect"
 license = "MIT"
 readme = "README.md"
 packages = [
-    {include = "mpesa_connect", from = "src"},
-    {include = "test", format = "sdist"}
+    { include = "mpesa_connect", from = "src" },
+    { include = "test", format = "sdist" },
 ]
 include = [
-    {path = "LICENSE"},
-    {path = "CONTRIBUTING.md", format = "sdist"},
-    {path = ".env.example", format = "sdist"}
+    { path = "LICENSE" },
+    { path = "CONTRIBUTING.md", format = "sdist" },
+    { path = ".env.example", format = "sdist" },
 ]
 keywords = ["daraja", "mpesa", "payment"]
 classifiers = [
@@ -33,7 +33,7 @@ mypy = "^0.991"
 pytest = "^7.2.1"
 black = "^22.12.0"
 types-requests = "^2.28.11.8"
-python-dotenv = {extras = ["cli"], version = "^0.21.0"}
+python-dotenv = { extras = ["cli"], version = "^0.21.0" }
 
 [build-system]
 requires = ["poetry-core"]
