--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mpesa-connect"
-version = "0.1.4"
+version = "2.0.0"
 description = "A wrapper library for the Daraja Mpesa API"
 authors = ["Eric <seaworndrift@gmail.com>"]
 homepage = "https://github.com/seaworn/mpesa-connect"
@@ -9,13 +9,9 @@ license = "MIT"
 readme = "README.md"
 packages = [
     { include = "mpesa_connect", from = "src" },
-    { include = "test", format = "sdist" },
+    { include = "tests", format = "sdist" },
 ]
-include = [
-    { path = "LICENSE" },
-    { path = "CONTRIBUTING.md", format = "sdist" },
-    { path = ".env.example", format = "sdist" },
-]
+include = [{ path = "LICENSE" }, { path = "CONTRIBUTING.md", format = "sdist" }]
 keywords = ["daraja", "mpesa", "payment"]
 classifiers = [
     "Natural Language :: English",
@@ -33,7 +29,7 @@ mypy = "^0.991"
 pytest = "^7.2.1"
 black = "^22.12.0"
 types-requests = "^2.28.11.8"
-python-dotenv = { extras = ["cli"], version = "^0.21.0" }
+responses = "^0.25.7"
 
 [build-system]
 requires = ["poetry-core"]
