--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,9 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.9.0 || >3.9.0,<3.9.1 || >3.9.1,<4.0"
 requests = "^2.28.2"
+cryptography = {version = "^45.0.5", extras = ["cryptography"]}
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^0.991"
